<resources>
    <string name="app_name">NugasYuk</string>
    <string name="nama_tugas">Nama Tugas</string>
    <string name="tanggal_pengerjaan">Tanggal Pengerjaan</string>
    <string name="deadline">Deadline</string>
    <string name="note">Note</string>
    <string name="tambah">Tambah</string>
    <string name="home">Home</string>
    <string name="tambah_tugas">Tambah Tugas</string>
    <string name="riwayat">Riwayat Tugas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="list_task">
        <item>Task 1</item>
        <item>Task 2</item>
        <item>Task 3</item>
        <item>Task 4</item>
        <item>Task 5</item>
        <item>Task 6</item>
        <item>Task 7</item>
        <item>Task 8</item>
    </string-array>
    <string-array name="note">
        <item>Note Tugas</item>
        <item>Note Tugas</item>
        <item>Note Tugas</item>
        <item>Note Tugas</item>
        <item>Note Tugas</item>
        <item>Note Tugas</item>
        <item>Note Tugas</item>
        <item>Note Tugas</item>
        <item>Note Tugas</item>
    </string-array>
    <string-array name="tanggal_task">
        <item>24/04/22</item>
        <item>24/04/22</item>
        <item>24/04/22</item>
        <item>24/04/22</item>
        <item>24/04/22</item>
        <item>24/04/22</item>
        <item>24/04/22</item>
        <item>24/04/22</item>
        <item>24/04/22</item>
    </string-array>
    <string-array name="list_tugas_selesai">
        <item>Task 9</item>
        <item>Task 10</item>
        <item>Task 11</item>
        <item>Task 12</item>
        <item>Task 13</item>
        <item>Task 14</item>
        <item>Task 15</item>
    </string-array>
    <string-array name="deskripsi_selesai">
        <item>Tugas Selesai</item>
        <item>Tugas Selesai</item>
        <item>Tugas Selesai</item>
        <item>Tugas Selesai</item>
        <item>Tugas Selesai</item>
        <item>Tugas Selesai</item>
        <item>Tugas Selesai</item>
    </string-array>
    <string-array name="tanggal_selesai">
        <item>29/04/22</item>
        <item>29/04/22</item>
        <item>29/04/22</item>
        <item>29/04/22</item>
        <item>29/04/22</item>
        <item>29/04/22</item>
        <item>29/04/22</item>
        <item>29/04/22</item>
        <item>29/04/22</item>
    </string-array>
</resources>