<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddTaskFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <!--        <TextView-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:text="@string/tambah_tugas"-->
            <!--            android:textSize="50sp"-->
            <!--            android:layout_marginLeft="20dp"-->
            <!--            android:textColor="@color/black"-->
            <!--            android:fontFamily="casual"-->
            <!--            android:textStyle="bold"-->
            <!--            android:layout_marginStart="20dp" />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_tugas"
                    android:textSize="20sp"/>

                <View
                    android:layout_width="400dp"
                    android:layout_height="40dp"
                    android:background="#FCF086"
                    android:layout_marginTop="40dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_pengerjaan"
                    android:textSize="20sp"/>

                <View
                    android:layout_width="400dp"
                    android:layout_height="40dp"
                    android:background="#FCF086"
                    android:layout_marginTop="40dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <View
                    android:layout_width="400dp"
                    android:layout_height="40dp"
                    android:background="#FCF086"
                    android:layout_marginTop="40dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textSize="20sp"/>

                <View
                    android:layout_width="400dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="40dp"
                    android:background="#FCF086" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginStart="100dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/addTask"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/soft_orange"
                        android:text="@string/tambah">
                    </androidx.appcompat.widget.AppCompatButton>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>